# python-websocket

./: .ai  README.md
storage-api/: .env  (+3 more)
trading-aggregator/: .env  .gitignore  app.py  pyproject.toml
trading-aggregator/scripts/: run_format.sh
trading-aggregator/src/: process_message.py
trading-aggregator/src/commands/: __init__.py  add_provider.py  base_command.py  clear_prices.py  clear_providers.py  command_resolver.py  command_type.py
trading-aggregator/src/commons/: default_error_message.py
trading-aggregator/src/providers/: provider.py  providers_controller.py  providers_list.py
trading-aggregator/src/services/: connections_manager.py  storage_api_service.py  trading_broadcast_service.py
trading-aggregator/src/symbols/: symbols_manager.py
trading-broadcaster/: .env  .gitignore  app.py  pyproject.toml
trading-broadcaster/src/: event_types  process_message.py
trading-broadcaster/src/aggregators/: aggregator.py  aggregators_controller.py  aggregators_list.py
trading-broadcaster/src/commands/: base_command.py  commands_resolver.py
trading-broadcaster/src/commands/configuration/: configuration_commands_type.py
trading-broadcaster/src/commands/configuration/commands/: __init__.py  add_provider.py  add_trading_aggregator.py  clear_prices.py  clear_providers.py  clear_trading_aggregators.py
trading-broadcaster/src/commands/data/: data_commands_type.py
trading-broadcaster/src/commands/data/commands/: __init__.py  subscribe.py  unsubscribe.py
trading-broadcaster/src/subscribers/: subscriber_type.py  subscribers.py  subscribers_controller.py
(+9 files in other folders)
